fixed report links not wrapping on chrome

--- a/css/report.css
+++ b/css/report.css
@@ -63,6 +63,10 @@ h1 {
   background-color: black;
 }
 
+.reportContent > p > a {
+  overflow-wrap: break-word;
+}
+
 @media (min-width: 645px) {
   .reportContent > a {
     width: 600px;
